# nixos-config

./: .gitignore  .sops.yaml  common-doom-config.el  flake.nix  id_rsa.pub  overlays.nix
.secrets/: DP-0  secrets.yaml  sudo-rules.nix  test.txt
.secrets/pubkeys/: pub  sc  sereja  sum
home/: bindings.nix  home.nix  launch-bar.sh  layout-switch.sh
home/programs/alacritty/: alacritty.yml  default.nix
home/programs/direnv/: default.nix
home/programs/emacs/: default.nix  doom-emacs.nix  savely-emacs-config.nix
home/programs/git/: default.nix
home/programs/gpg/: default.nix
home/programs/kitty/: default.nix  ssh.conf
home/programs/rofi/: default.nix  theme.rasi
home/programs/shell/: default.nix
home/programs/starship/: default.nix
home/programs/sway/: default.nix
home/programs/xmonad/: .xinitrc  (+2 more)
home/programs/xmonad/config/: .dir-locals.el  .gitignore  CHANGELOG.md  config.cabal  hie.yaml  shell.nix
home/programs/xmonad/config/app/: Xmonad.hs  xmonad.org
overlays/: emacs-packages.nix
system/: configuration.nix  graphics.nix  guix.nix  hardware-configuration.nix  network.nix  xmonad.nix  yubikey-image.nix  yubikey.nix
vps/: configuration.nix  containers.nix  git-server.nix  hardware-configuration.nix  home.nix  matrix.nix  network.nix  nginx.nix  repos-backup.sh  repos-create.sh  repos-delete.sh  repos-packages.nix  shell-script-builder.sh  sops.nix  vault.nix  vpn.nix
vps/containers/: default.nix  matrix.nix  nextcloud.nix  vault.nix
vps/doom.d/: config.el  init.el
vps/nginx/: default.nix
vps/scripts/: shell-string-script-builder.sh
(+16 files in other folders)
