cabal-version:      2.4
name:               config
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Dmitry Laptov
maintainer:         dmitry.laptov@serokell.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable config
    main-is:          Xmonad.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    other-extensions:   OverloadedStrings
                        LambdaCase
                        TypeApplications
    build-depends:    base
                    , xmonad
		    , xmonad-contrib
		    , containers
		    , X11
    hs-source-dirs:   app
    default-language: Haskell2010
